中间件/数据库/dbms/MySQL/实时数据同步/flink-streaming-platform-web/1.4-ingress.yaml
---
# 外部域名
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink-jobmanager
  namespace: bigdata-sync
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: flink-bigdata-sync.local.
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: flink-jobmanager
                port:
                  name: webui
